# fpl_analysis

./: LICENSE  README.md
analytics/: .env.default  .gitignore  pyproject.toml
analytics/analysis/: config.py  model_manager.py  storage.py  utils.py
analytics/analysis/base/: __init__.py  compose.py  cross_val.py  data_loader.py  data_saver.py  processor.py  test.py  train.py
analytics/analysis/core/: settings.py
analytics/analysis/data/processed/: test_set.csv  train_set.csv  valid_set.csv
analytics/analysis/gcp/: files.py  loader.py  predictor.py  saver.py  storage.py
analytics/analysis/models/: hyperparamter_config.py  model_manager.py
analytics/analysis/notebooks/: forwards_value_pred.ipynb  valuation_prediction.ipynb
analytics/analysis/src/: data.py  exploration.py  hyperparameter_tuning.py  models.py  preprocessing.py  train.py
analytics/analysis/src/prediction/: weights.py
analytics/analysis/src/testing/: test.py  tester.py
analytics/analysis/src/training/: cross_validation.py  features.py  model_trainer.py  train.py
analytics/analysis/src/utils/: data_splitter.py  metrics.py
analytics/analysis/src/validation/: parameters.py  tuning.py
analytics/analysis/src_2/models/: blend.py  regressors.py
analytics/analysis/src_2/prediction/: blended.py  mean_pred.py
analytics/analysis/src_2/preprocessing/: main.py
analytics/analysis/src_2/testing/: test.py  tester.py
analytics/analysis/src_2/training/: cross_validation.py  model_trainer.py  models.py  train.py
analytics/analysis/src_2/utils/: data_splitter.py  model_metadata.py
analytics/analysis/src_2/validation/: tuning.py  validate.py
analytics/analysis/src_forwards/: test.py  train.py
analytics/analysis/src_forwards/config/: __init__.py  _forwards.py
analytics/analysis/src_forwards/cross_validate/: __init__.py  _cv.py
analytics/analysis/src_forwards/models/: __init__.py  pipelines.py  regressors.py
analytics/analysis/src_forwards/statistics/: __init__.py  _confidence_interval.py  _weights.py
analytics/analysis/src_forwards/testing/: __init__.py  _predictor.py  _tester.py  test.py
analytics/analysis/src_forwards/training/: __init__.py  _data_splitter.py  _trainer.py  train.py
app-backend/: .gitignore  Dockerfile  pyproject.toml  run.sh
app-backend/app/: __main__.py  application.py  main.py
app-backend/app/api/: router.py
app-backend/app/api/handlers/: dropdowns.py  value_prediction.py
app-backend/app/core/: config.py
app-backend/app/data/: predictions.parquet
app-backend/app/gcp/: files.py  storage.py
app-backend/app/schemas/: __init__.py  _dropdowns.py  _prediction.py
app-backend/app/services/: database.py  predictions.py
app-backend/app/utilities/: logging.py
app-frontend/: Dockerfile  pyproject.toml
app-frontend/frontend/: app.py
app-frontend/frontend/components/: __init__.py  _dataframe.py  _plot.py  _sidebar.py
app-frontend/frontend/core/: config.py  settings.py
app-frontend/frontend/models/: __init__.py  _dropdown.py  _query.py
app-frontend/frontend/services/: __init__.py  _dropdowns.py  _pred_api.py
backend/: pyproject.toml
exploration/: .gitignore  pyproject.toml
exploration/explore/core/: settings.py
exploration/explore/gcp/: storage.py
exploration/explore/src/: explore.py  preprocess.py  visualisation.py
feature-pipeline/: .env.default  .gitignore  README.md  pyproject.toml
feature-pipeline/feature_pipeline/: apis.py  database.py  metadata.py  pipeline.py  settings.py
feature-pipeline/feature_pipeline/apis/: fbref.py  fpl.py  transfermarkt.py
feature-pipeline/feature_pipeline/core/: settings.py
feature-pipeline/feature_pipeline/db/: database.py
feature-pipeline/feature_pipeline/etl/: extract.py  load.py  main.py  transform.py  validation.py
feature-pipeline/feature_pipeline/scraper/: response.py
feature-pipeline/feature_pipeline/utilities/: storage.py  utils.py
feature-processing/: .gitignore  pyproject.toml
feature-processing/processing/abcs/: loader.py  loaders.py  processor.py  saver.py
feature-processing/processing/forwards/: stats.py
feature-processing/processing/gcp/: \  blobs.py  buckets.py  files.py  loader.py  saver.py  storage.py
feature-processing/processing/notebooks/: 01_join_wages_values.ipynb  02_join_wage_values_stats.ipynb  join_wages_values.ipynb
feature-processing/processing/utilities/: utils.py
(+129 files in other folders)
