[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "Analytics of fantasy football player data"
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
pandas = "^2.1.4"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
google-cloud-storage = "^2.14.0"
seaborn = "^0.13.1"
nbformat = "^5.9.2"
ipykernel = "^6.28.0"
jinja2 = "^3.1.3"
statsmodels = "^0.14.1"
category-encoders = "^2.6.3"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
