[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend server for machine learning app"
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
