[tool.poetry]
name = "exploration"
version = "0.1.0"
description = "Exploratory Data Analysis (EDA) of football related datasets"
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.3"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
rich = "^13.7.0"
plotly = "^5.18.0"
google-cloud-storage = "^2.14.0"
joblib = "^1.3.2"
python-dotenv = "^1.0.1"
pyarrow = "^15.0.0"
pycountry-convert = "^0.7.2"
scipy = "^1.12.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
nbformat = "^5.9.2"
black = "^24.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
