[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.5"
hopsworks = "^3.4.3"
pandas = "<=2.1.0"
hsfs = "^3.4.5"
great-expectations = "<=0.15.12"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
pydantic = "^2.5.3"
httpx = "^0.26.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
